--- a/_pgbackup/assets/css/main_1624707928.css
+++ b/_pgbackup/assets/css/main_1624707928.css
@@ -718,6 +718,17 @@ body {
     }
 }
 
+.intro--banner {
+    position: inherit;
+    height: 475px;
+    margin: 0;
+    left: 12px;
+    top: 12px;
+    right: 12px;
+    padding: 0;
+    bottom: 12px;
+}
+
 .intro--banner::before {
     content: "";
     position: absolute;
