--- a/_pgbackup/css/new-age.min_1624715412.css
+++ b/_pgbackup/css/new-age.min_1624715412.css
@@ -46,7 +46,7 @@ a {
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
-    color: #ffffff;
+    color: #fdcc52;
 }
 
 a:focus,
@@ -80,7 +80,7 @@ p {
 }
 
 .navbar-default .navbar-header .navbar-brand {
-    color: #f8f8f8;
+    color: #fdcc52;
 }
 
 .btn,
@@ -133,7 +133,7 @@ p {
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: rgba(255, 255, 255, 0.7);
+        color: rgba(255,255,255,.7);
     }
 
     .navbar-default .navbar-header .navbar-brand:focus,
@@ -514,9 +514,6 @@ footer ul li a:hover {
     color: #ffffff;
     text-shadow: none;
     background: #222;
-    bottom: 0px;
-    margin-bottom: -3px;
-    width: 5000px;
 }
 
 img::selection {
