--- a/_pgbackup/css/new-age_1624715279.css
+++ b/_pgbackup/css/new-age_1624715279.css
@@ -59,7 +59,7 @@ p {
   margin-bottom: 20px;
 }
 .navbar-default {
-  background-color: #35454d;
+  background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -116,7 +116,7 @@ p {
   }
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
-    color: #35454d;
+    color: white;
   }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
@@ -127,7 +127,7 @@ p {
     color: white;
   }
   .navbar-default.affix {
-    background-color: #35454d;
+    background-color: white;
     border-color: rgba(34, 34, 34, 0.1);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
@@ -151,11 +151,11 @@ header {
   width: 100%;
   min-height: auto;
   overflow-y: hidden;
-  background: #3a373b;
+  background: url("../img/bg-pattern.png"), #7b4397;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #35454d, #f06260);
+  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #35454d, #f06260);
+  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
 }
@@ -284,8 +284,8 @@ section.features .feature-item h3 {
 }
 section.features .feature-item i {
   font-size: 80px;
-  background: -webkit-linear-gradient(to left, #35454d, #f06260);
-  background: linear-gradient(to left, #35454d, #f06260);
+  background: -webkit-linear-gradient(to left, #7b4397, #dc2430);
+  background: linear-gradient(to left, #7b4397, #dc2430);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -337,7 +337,7 @@ section.contact h2 {
   margin-bottom: 25px;
 }
 section.contact h2 i {
-  color: #f06260;
+  color: #dd4b39;
 }
 section.contact ul.list-social {
   margin-bottom: 0;
@@ -358,16 +358,16 @@ section.contact ul.list-social li.social-twitter a:hover {
   background-color: #0d95e8;
 }
 section.contact ul.list-social li.social-facebook a {
-  background-color: #35454d;
+  background-color: #3b5998;
 }
 section.contact ul.list-social li.social-facebook a:hover {
-  background-color: #35454d;
+  background-color: #344e86;
 }
 section.contact ul.list-social li.social-google-plus a {
-  background-color: #f06260;
+  background-color: #dd4b39;
 }
 section.contact ul.list-social li.social-google-plus a:hover {
-  background-color: #f06260;
+  background-color: #d73925;
 }
 footer {
   background-color: #222222;
