--- a/_pgbackup/css/new-age.min_1624818020.css
+++ b/_pgbackup/css/new-age.min_1624818020.css
@@ -19,7 +19,7 @@
 }
 
 body,
-html {
+html {
     height: 100%;
     width: 100%;
 }
@@ -30,15 +30,15 @@ body {
 }
 
 .navbar-default,
-.navbar-default .navbar-header .navbar-brand,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.navbar-default .navbar-header .navbar-brand,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: Catamaran,Helvetica,Arial,sans-serif;
-    font-weight: 500;
+    font-weight: 200;
     letter-spacing: 1px;
 }
 
@@ -50,7 +50,7 @@ a {
 }
 
 a:focus,
-a:hover {
+a:hover {
     color: #fcbd20;
 }
 
@@ -84,14 +84,14 @@ p {
 }
 
 .btn,
-.navbar-default .nav>li>a {
+.navbar-default .nav>li>a {
     font-family: Lato,Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
 .navbar-default .navbar-header .navbar-brand:focus,
-.navbar-default .navbar-header .navbar-brand:hover {
+.navbar-default .navbar-header .navbar-brand:hover {
     color: #fcbd20;
 }
 
@@ -106,23 +106,23 @@ p {
 }
 
 .navbar-default .nav>li>a,
-.navbar-default .nav>li>a:focus {
+.navbar-default .nav>li>a:focus {
     color: #222;
 }
 
 .navbar-default .nav>li>a:focus:hover,
-.navbar-default .nav>li>a:hover {
+.navbar-default .nav>li>a:hover {
     color: #fdcc52;
 }
 
 .navbar-default .nav>li.active>a,
-.navbar-default .nav>li.active>a:focus {
+.navbar-default .nav>li.active>a:focus {
     color: #fdcc52!important;
     background-color: transparent;
 }
 
 .navbar-default .nav>li.active>a:focus:hover,
-.navbar-default .nav>li.active>a:hover {
+.navbar-default .nav>li.active>a:hover {
     background-color: transparent;
 }
 
@@ -137,22 +137,22 @@ p {
     }
 
     .navbar-default .navbar-header .navbar-brand:focus,
-    .navbar-default .navbar-header .navbar-brand:hover {
+        .navbar-default .navbar-header .navbar-brand:hover {
         color: #fff;
     }
 
     .navbar-default .nav>li>a,
-    .navbar-default .nav>li>a:focus {
+        .navbar-default .nav>li>a:focus {
         color: rgba(255,255,255,.7);
     }
 
     .navbar-default .nav>li>a:focus:hover,
-    .navbar-default .nav>li>a:hover {
+        .navbar-default .nav>li>a:hover {
         color: #fff;
     }
 
     .navbar-default.affix {
-        background-color: #f2f2f2;
+        background-color: #fff;
         border-color: rgba(34,34,34,.1);
     }
 
@@ -161,17 +161,17 @@ p {
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:focus,
-    .navbar-default.affix .navbar-header .navbar-brand:hover {
+        .navbar-default.affix .navbar-header .navbar-brand:hover {
         color: #fdcc52;
     }
 
     .navbar-default.affix .nav>li>a,
-    .navbar-default.affix .nav>li>a:focus {
+        .navbar-default.affix .nav>li>a:focus {
         color: #222;
     }
 
     .navbar-default.affix .nav>li>a:focus:hover,
-    .navbar-default.affix .nav>li>a:hover {
+        .navbar-default.affix .nav>li>a:hover {
         color: #fdcc52;
     }
 }
@@ -247,15 +247,14 @@ header .device-container .screen img {
     }
 
     header .device-container {
-        max-width: 200;
+        max-width: none;
         max-height: calc(0vh);
         margin: 100px auto 0;
     }
 }
 
 footer,
-section.contact {
-    background: linear-gradient(to right,#35454d,#141728);
+section.contact {
     text-align: center;
 }
 
@@ -266,7 +265,6 @@ section.contact {
 }
 
 section {
-    background: #c2c2c20b;
     padding: 100px 0;
 }
 
@@ -275,7 +273,6 @@ section h2 {
 }
 
 section.download {
-    background: linear-gradient(to left,#35454d,#f06260);
     padding: 150px 0;
     position: relative;
 }
@@ -322,7 +319,7 @@ section.features .section-heading p {
 }
 
 section.features .device-container,
-section.features .feature-item {
+section.features .feature-item {
     max-width: 300px;
     margin: 0 auto;
 }
@@ -337,7 +334,7 @@ section.features .device-container {
     }
 
     section.features .device-container,
-    section.features .feature-item {
+        section.features .feature-item {
         max-width: none;
     }
 }
@@ -348,7 +345,7 @@ section.features .feature-item {
 }
 
 section.contact h2,
-section.cta .cta-content h2 {
+section.cta .cta-content h2 {
     margin-top: 0;
     margin-bottom: 25px;
 }
@@ -405,7 +402,7 @@ section.cta .overlay {
 }
 
 footer ul,
-section.contact ul.list-social {
+section.contact ul.list-social {
     margin-bottom: 0;
 }
 
@@ -414,7 +411,6 @@ section.contact h2 i {
 }
 
 section.contact ul.list-social li a {
-    /* background: linear-gradient(to left,#35454d,#f06260); */
     display: block;
     height: 80px;
     width: 80px;
@@ -425,12 +421,12 @@ section.contact ul.list-social li a {
 }
 
 footer p,
-footer ul li a {
+footer ul li a {
     font-size: 12px;
 }
 
 footer,
-footer ul li a {
+footer ul li a {
     color: rgba(255,255,255,.3);
 }
 
@@ -450,7 +446,7 @@ section.contact ul.list-social li.social-facebook a:hover {
     background-color: #344e86;
 }
 
-section.contact ul.list-social li.social-instagram a {
+section.contact ul.list-social li.social-google-plus a {
     background-color: #dd4b39;
 }
 
@@ -468,9 +464,9 @@ footer p {
 }
 
 footer ul li a.active,
-footer ul li a:active,
-footer ul li a:focus,
-footer ul li a:hover {
+footer ul li a:active,
+footer ul li a:focus,
+footer ul li a:hover {
     text-decoration: none;
 }
 
@@ -495,9 +491,9 @@ footer ul li a:hover {
 }
 
 .btn-outline.active,
-.btn-outline:active,
-.btn-outline:focus,
-.btn-outline:hover {
+.btn-outline:active,
+.btn-outline:focus,
+.btn-outline:hover {
     color: #fff;
     background-color: #fdcc52;
     border-color: #fdcc52;
