adding faq, fixing colors, adding social network

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -225,6 +225,10 @@ section {
 section h2 {
   font-size: 50px;
 }
+section.faq {
+  padding: 550px 0;
+  position: relative;
+}
 section.download {
   padding: 150px 0;
   position: relative;
